--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-expressio-seed-mpe",
   "description": "Work in progress seed project. ",
-  "version": "0.0.2-dev",
+  "version": "0.0.2-dev+20150802-2231",
   "homepage": "https://github.com/dotmpe/node-expressio-seed",
   "author": {
     "name": "B. van Berkum",
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "coffee-script": "latest",
+    "express": "^4.13.2",
     "express.io": "latest"
   },
   "disabledAltDependencies": {
