--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-coffee": "latest",
     "grunt-contrib-jshint": "latest",
+    "mocha": "latest",
     "grunt-mocha-test": "^0.12.7",
     "grunt-yamllint": "^0.2.0",
     "load-grunt-config": "latest",
