--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "socketio"
   ],
   "private": true,
-  "license": "GPLv3",
+  "license": "GPL-3.0",
   "licenses": [
     {
-      "type": "GPLv3",
+      "type": "GPL-3.0",
       "url": "https://github.com/dotmpe/node-expressio-seed/blob/master/LICENSE-GPLv3"
     }
   ],
@@ -31,22 +31,24 @@
   },
   "main": "server.coffee",
   "scripts": {
-    "start": "NODE_ENV=development nodemon server.coffee -w coffee -w src -w public -e jade,js,coffee,meta,yaml",
-    "test": "grunt --force lint test"
+
+    "test": "grunt --force lint test",
+
+    "start": "NODE_ENV=development nodemon server.coffee -w coffee -w src -w public -e jade,js,coffee,meta,yaml"
   },
   "dependencies": {
-    "coffee-script": "latest",
+    "coffee-script": "^1.11.1",
     "express.io": "latest"
   },
   "disabledAltDependencies": {
     "nodelib": "git://github.com/dotmpe/nodelib#dev"
   },
   "devDependencies": {
-    "chai": "^3.2.0",
-    "coffeelint": "latest",
-    "grunt": "latest",
-    "grunt-cli": "latest",
-    "grunt-coffeelint": "latest",
+    "chai": "^3.1.0",
+    "coffeelint": "^1.15.7",
+    "grunt": "^0.4.5",
+    "grunt-cli": "^1.2.0",
+    "grunt-coffeelint": "^0.0.16",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-coffee": "latest",
     "grunt-contrib-jshint": "latest",
